# go-rust-interop

./: .gitignore  README.md  devenv.nix
go-bench/: call_bench_test.go  cgo_add.go  go.mod  go.sum  main.go
go-bench/cmd/: createDb.go  pointRead.go  root.go
go-wrapper/: cosmos.go  go.mod
go-wrapper-bench/: go.mod  main.go
go-wrapper-bench/cmd/: pointRead.go  root.go
rust-bench/: Cargo.toml
rust-bench/src/: main.rs
script/: update-azurecosmos
