[package]
name = "rust-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
azure_core = "0.30.1"
azure_data_cosmos = { version = "0.29.0", features = ["key_auth", "preview_query_engine"] }
azure_identity = "0.30.0"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
num_cpus = "1.17.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
